# zhujiang_ws

./: .gitignore  zhujiang_ui.py
src/UI/: demo.py  my_virtual_keyboard.py  tanchuang.py  tanchuang.ui  zhujiang.ui  zhujiang_ui.py
src/add_record_pkg/: CMakeLists.txt  package.xml
src/add_record_pkg/scripts/: address_record.py
src/door_control_pkg/: CMakeLists.txt  package.xml
src/door_control_pkg/include/door_control_pkg/: door_control_node.h
src/door_control_pkg/src/: door_control_node.cpp
src/master_pkg/: CMakeLists.txt  package.xml
src/master_pkg/include/master_pkg/: task_manager_node.h  tcp_server.h
src/master_pkg/launch/: start.launch
src/master_pkg/src/: delivery_node.cpp  task_manager_node.cpp  tcp_server.cpp  tcp_test.py
src/navigation_pkg/: CMakeLists.txt  package.xml
src/navigation_pkg/config/: addresses.yaml
src/navigation_pkg/src/: navigation_node.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/action/: delivery.action
src/robot_msgs/msg/: Door_open.msg  MarkerArray.msg  ui_show.msg
src/robot_msgs/srv/: CheckMarkerId.srv  delivery.srv  pick.srv  ui.srv  unique_move.srv
src/tracer_ros/tracer_base/launch/: tracer_base.launch
src/tracer_ros/tracer_base/src/: tracer_messenger.cpp
src/tracer_ros/tracer_bringup/launch/: tracer_auto.launch  tracer_robot_base.launch
src/tracer_ros/tracer_description/launch/: display_models.launch
src/ui_pkg/: CMakeLists.txt  package.xml
src/ui_pkg/scripts/: ui_node.py
src/ui_pkg/scripts/One_cabin/: 01_homepage.ui  02_send.ui  Face.ui  Face_ui.py  New_send.py  Pickup.ui  TaskSuccessDialog.py  TaskSuccessDialog.ui  arrive.py  arrive.ui  closethedoor.ui  closethedoor_ui.py  homepage_ui.py  main.py  pickup_ui.py  resources.qrc  send_ui.py  status_bar_controller.py
src/ui_pkg/voice_msgs/: voice_msgs.txt
src/unique_move_pkg/: CMakeLists.txt  package.xml
src/unique_move_pkg/launch/: unique_move.launch
src/unique_move_pkg/scripts/: charuco_camera_calibration.yaml  test.py  test_marker.py  trajectory.py  unique_move_node.py
src/unique_move_pkg/src/: marker_detection_service.cpp  pose_estimation_node.cpp
start/: docker_start.sh  setup.txt  start.sh  start2.sh
